--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,40 @@
         const [plugins, setPlugins] = React.useState([]);
         const [newPluginName, setNewPluginName] = React.useState('');
         const [newPluginCode, setNewPluginCode] = React.useState('');
-        const [updatePluginId, setUpdatePluginId] = React.useState('');
-        const [updatePluginCode, setUpdatePluginCode] = React.useState('');
-        const [deletePluginId, setDeletePluginId] = React.useState('');
+        const [editPluginId, setEditPluginId] = React.useState(null);
+        const [editPluginCode, setEditPluginCode] = React.useState('');
+        const [editingPluginId, setEditingPluginId] = React.useState(null);
 
         React.useEffect(() => {
           fetch('/plugins')
             .then(res => res.json())
             .then(data => setPlugins(data));
         }, []);
+
+        function handleEditPlugin(plugin) {
+          setEditPluginId(plugin.id);
+          setEditPluginCode(plugin.code);
+          setEditingPluginId(plugin.id);
+        }
+
+        function handleCancelEdit() {
+          setEditPluginId(null);
+          setEditPluginCode('');
+          setEditingPluginId(null);
+        }
+
+        function handleSaveEdit() {
+          fetch(`/plugins/${editPluginId}`, {
+            method: 'PUT',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ code: editPluginCode }),
+          })
+            .then(res => res.json())
+            .then(data => {
+              setPlugins(plugins.map(p => (p.id === data.id ? data : p)));
+              handleCancelEdit();
+            });
+        }
 
         function handleCreatePlugin() {
           fetch('/plugins', {
@@ -32,51 +57,54 @@
           })
             .then(res => res.json())
             .then(data => {
+              setPlugins([...plugins, data]);
               setNewPluginName('');
               setNewPluginCode('');
-              setPlugins([...plugins, data]);
             });
         }
 
-        function handleUpdatePlugin() {
-          console.log('dfadsfds')
-          fetch(`/plugins/${updatePluginId}`, {
-            method: 'PUT',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ code: updatePluginCode }),
-          })
-            .then(res => res.json())
-            .then(data => {
-              setUpdatePluginId('');
-              setUpdatePluginCode('');
-              setPlugins(plugins.map(p => (p.id === data.id ? data : p)));
+        function handleDeletePlugin(id) {
+          if (window.confirm("Are you sure you want to delete this plugin?")) {
+            fetch(`/plugins/${id}`, {
+              method: "DELETE",
+            }).then(() => {
+              setPlugins(plugins.filter((p) => p.id !== id));
             });
+          }
         }
 
-        function handleDeletePlugin() {
-          fetch(`/plugins/${deletePluginId}`, {
-            method: 'DELETE',
-          })
-            .then(() => {
-              setDeletePluginId('');
-              setPlugins(plugins.filter(p => p.id !== parseInt(deletePluginId)));
-            });
-        }
         return (
           <div>
             <h1>Enricher Plugins List</h1>
             <ul>
-              {plugins.map(plugin => (
+              {plugins.map((plugin) => (
                 <li key={plugin.id}>
                   <strong>{plugin.name}</strong>
-                  <pre>{plugin.code}</pre>
-                  <button onClick={() => setUpdatePluginId(plugin.id)}>Update Plugin</button>
-                  <button onClick={() => setDeletePluginId(plugin.id)}>Delete Plugin</button>
+                  {editingPluginId === plugin.id ? (
+                    <div>
+                      <textarea
+                        rows="10"
+                        value={editPluginCode}
+                        onChange={(e) => setEditPluginCode(e.target.value)}
+                      />
+                      <br />
+                      <button onClick={() => handleSaveEdit(plugin.id)}>Save</button>
+                      <button onClick={() => handleCancelPlugin()}>Cancel</button>
+                    </div>
+                    ) : (
+                      <React.Fragment>
+                        <pre>{plugin.code}</pre>
+                        <button onClick={() => handleEditPlugin(plugin)}>
+                          Edit
+                        </button>
+                        <button onClick={() => handleDeletePlugin(plugin.id)}>Delete</button>
+                      </React.Fragment>
+                    )}
                 </li>
               ))}
             </ul>
             <h2>Create Plugin</h2>
-            <form onSubmit={handleCreatePlugin}>
+            <form onSubmit={e => { e.preventDefault(); }}>
               <label>
                 Name:
                 <br />
@@ -89,39 +117,13 @@
                 <textarea rows="10" value={newPluginCode} onChange={e => setNewPluginCode(e.target.value)} />
               </label>
               <br />
-              <button type="submit">Create Plugin</button>
-            </form>
-            <h2>Update Plugin</h2>
-            <form onSubmit={handleUpdatePlugin}>
-              <label>
-                Plugin ID:
-                <br />
-                <input type="text" value={updatePluginId} onChange={e => setUpdatePluginId(e.target.value)} />
-              </label>
-              <br />
-              <label>
-                Code:
-                <br />
-                <textarea rows="10" value={updatePluginCode} onChange={e => setUpdatePluginCode(e.target.value)} />
-              </label>
-              <br />
-              <button type="submit">Update Plugin</button>
-            </form>
-            <h2>Delete Plugin</h2>
-            <form onSubmit={handleDeletePlugin}>
-              <label>
-                Plugin ID:
-                <br />
-                <input type="text" value={deletePluginId} onChange={e => setDeletePluginId(e.target.value)} />
-              </label>
-              <br />
-              <button type="submit">Delete Plugin</button>
+              <button type="submit" onClick={handleCreatePlugin}>Create Plugin</button>
             </form>
           </div>
         );
       }
 
-    ReactDOM.render(<App />, document.getElementById('root'));
-  </script>
-</body>
+      ReactDOM.render(<App />, document.getElementById('root'));
+    </script>
+  </body>
 </html>
